# GameStats2Text

./: README.md  cleaned_data.json  data-new.ipynb  data-retrieve.ipynb  data.csv  data.ipynb  data.json  lebron_interviews.json  lebron_interviews_first5.json  main.ipynb  pyproject.toml
data/: data.ipynb  dataset.csv  dataset.json  interviews.json  processed_interviews.json
src/data-processing/: setupData.py  stats_encoder.py
src/models/: encoder.py  generator.py
src/process/: setupData.py  stats_encoder.py  testSetup.ipynb
