[project]
name = "game-stat-2-text"
version = "0.0.1"
description = "NLG for post game analysis of player stats"
authors = [
    {name = "Jason Nair, Josheev Rai, Aakash Suryavanshi"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
